--- a/learning_langgraph.ipynb
+++ b/learning_langgraph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjSTaLMdur4n5j6RkPZnzY",
+      "authorship_tag": "ABX9TyNhpJyQAdfq+pMXRO0nRmlE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -957,106 +957,15 @@
     {
       "cell_type": "code",
       "source": [
-        "from langgraph.checkpoints import MemorySaver  # Import MemorySaver from langgraph.checkpoints\n",
+        "from langgraph.checkpoint.memory import MemorySaver  # Import MemorySaver from langgraph.checkpoint\n",
         "\n",
         "memory = MemorySaver()\n",
         "graph = builder.compile(checkpointer=memory)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 367
-        },
-        "id": "fwFxmNpvNkS2",
-        "outputId": "fe8d6043-1f2d-48ae-dcc2-0c2552e22549"
+        "id": "fwFxmNpvNkS2"
       },
-      "execution_count": 81,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'langgraph.checkpoints'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-81-ca08e096528f>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlanggraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheckpoints\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMemorySaver\u001b[0m  \u001b[0;31m# Import MemorySaver from langgraph.checkpoints\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmemory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMemorySaver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuilder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheckpointer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmemory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'langgraph.checkpoints'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from langchain.callbacks.manager import CallbackManagerForChainRun  # Import from langchain\n",
-        "from langchain.memory import ConversationBufferMemory  # Import from LangChain\n",
-        "\n",
-        "# ... (your existing code) ...\n",
-        "\n",
-        "# Create and set checkpointer using ConversationBufferMemory\n",
-        "memory = ConversationBufferMemory()  # Create instance of ConversationBufferMemory\n",
-        "checkpointer = CallbackManagerForChainRun.get_noop_manager()  # Get a noop manager to ensure compatibility\n",
-        "\n",
-        "# ... (your existing code) ...\n",
-        "\n",
-        "graph = builder.compile(checkpointer=checkpointer, callbacks=[memory.save_context, memory.load_memory_variables])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 248
-        },
-        "id": "t-iPj3wvO1yf",
-        "outputId": "407efda6-298c-4338-fa8e-07186a014119"
-      },
-      "execution_count": 82,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-82-0397a723e34c>:7: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
-            "  memory = ConversationBufferMemory()  # Create instance of ConversationBufferMemory\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "StateGraph.compile() got an unexpected keyword argument 'callbacks'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-82-0397a723e34c>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# ... (your existing code) ...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mgraph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuilder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheckpointer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcheckpointer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcallbacks\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmemory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_context\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmemory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_memory_variables\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: StateGraph.compile() got an unexpected keyword argument 'callbacks'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "memory = ConversationBufferMemory()  # Create instance of ConversationBufferMemory\n",
-        "# checkpointer = CallbackManagerForChainRun.get_noop_manager()  # Get a noop manager to ensure compatibility\n",
-        "\n",
-        "# # ... (your existing code) ...\n",
-        "\n",
-        "graph = builder.compile(checkpointer=[memory.save_context, memory.load_memory_variables]) # replace checkpointer and callbacks with checkpointers"
-      ],
-      "metadata": {
-        "id": "5jTY60ceN2HG"
-      },
-      "execution_count": 84,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -1076,9 +985,9 @@
           "height": 266
         },
         "id": "hVQ4hezcPIlX",
-        "outputId": "865acdb5-68b0-46da-c03e-7b8e8d352ade"
+        "outputId": "2a8b7553-9a52-4ef9-8ac1-e5deb103d280"
       },
-      "execution_count": 85,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1096,9 +1005,29 @@
       "cell_type": "code",
       "source": [
         "# run the assistant, initiate graph and start the convo\n",
-        "# import shutil\n",
+        "#import shutil\n",
         "\n",
         "import uuid\n",
+        "\n",
+        "def _print_event(event, printed):\n",
+        "    \"\"\"\n",
+        "    Helper function to print event values, ensuring each message is printed only once.\n",
+        "\n",
+        "    Args:\n",
+        "        event: The event containing the messages to be printed.\n",
+        "        printed: A set to keep track of which messages have already been printed.\n",
+        "    \"\"\"\n",
+        "    for message in event[\"messages\"]:\n",
+        "        message_content = message.content\n",
+        "        # Convert the message content to a tuple if it's a list\n",
+        "        if isinstance(message_content, list):\n",
+        "            message_content = tuple(message_content)\n",
+        "        # Instead of directly checking for the dictionary in the set,\n",
+        "        # we now check for a hashable representation of it:\n",
+        "        if repr(message_content) not in printed:  # Changed line\n",
+        "            print(message_content)\n",
+        "            printed.add(repr(message_content)) # Changed line\n",
+        "            print(\"------------------\")\n",
         "\n",
         "# Let's create an example conversation a user might have with the assistant\n",
         "tutorial_questions = [\n",
@@ -1125,25 +1054,55 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 373
+          "base_uri": "https://localhost:8080/"
         },
         "id": "FgJIm6QZPaeZ",
-        "outputId": "f0c34542-3c69-4d67-e234-b61ec9e9c19a"
+        "outputId": "3b77f579-5027-490e-bfd3-cddb511687ec"
       },
-      "execution_count": 86,
+      "execution_count": 98,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'list' object has no attribute 'get_next_version'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-86-6b643a892782>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0;34m{\u001b[0m\u001b[0;34m\"messages\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"user\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mquestion\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstream_mode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"values\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     )\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mevents\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0m_print_event\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_printed\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langgraph/pregel/__init__.py\u001b[0m in \u001b[0;36mstream\u001b[0;34m(self, input, config, stream_mode, output_keys, interrupt_before, interrupt_after, debug, subgraphs)\u001b[0m\n\u001b[1;32m   1935\u001b[0m                     \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"custom\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1936\u001b[0m                 )\n\u001b[0;32m-> 1937\u001b[0;31m             with SyncPregelLoop(\n\u001b[0m\u001b[1;32m   1938\u001b[0m                 \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1939\u001b[0m                 \u001b[0mstream\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mStreamProtocol\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstream_modes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langgraph/pregel/loop.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, input, stream, config, store, checkpointer, nodes, specs, manager, interrupt_after, interrupt_before, output_keys, stream_keys, debug)\u001b[0m\n\u001b[1;32m    864\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mExitStack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    865\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheckpointer\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 866\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheckpointer_get_next_version\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheckpointer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_next_version\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    867\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheckpointer_put_writes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheckpointer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mput_writes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    868\u001b[0m             self.checkpointer_put_writes_accepts_task_path = (\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'get_next_version'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hey\n",
+            "------------------\n",
+            "Hello! 👋 I'm here to help you understand the potential savings you could achieve by switching to solar energy. To provide you with accurate calculations, I'll need to know:\n",
+            "\n",
+            "- What is your current monthly electricity cost? (in euros)\n",
+            "\n",
+            "Once you share this information, I can help calculate your potential savings with solar panels.\n",
+            "------------------\n",
+            "can you calculate my energy saving\n",
+            "------------------\n",
+            "I'd be happy to help calculate your potential energy savings with solar panels. However, to give you an accurate calculation, I need to know:\n",
+            "\n",
+            "- What is your current monthly electricity cost (in euros)?\n",
+            "\n",
+            "Without this information, I cannot provide accurate calculations for your specific situation. Could you please share your monthly electricity bill amount with me?\n",
+            "------------------\n",
+            "my montly cost is $100, what will i save\n",
+            "------------------\n",
+            "({'text': \"I'll help you calculate your potential savings with solar panels based on your monthly electricity cost of $100. Let me run those numbers for you.\", 'type': 'text'}, {'id': 'toolu_01Tkvrc5gyUPBApxtqZPJs4B', 'input': {'monthly_cost': 100}, 'name': 'compute_savings', 'type': 'tool_use'})\n",
+            "------------------\n",
+            "{\"number_of_panels\": 10, \"installation_cost\": 5102.04, \"net_savings_10_years\": 6897.96}\n",
+            "------------------\n",
+            "Based on your monthly electricity cost of $100, here's what I can tell you:\n",
+            "\n",
+            "1. System Size:\n",
+            "   - You would need approximately 10 solar panels to cover your energy needs\n",
+            "\n",
+            "2. Costs and Savings:\n",
+            "   - The estimated installation cost would be $5,102.04\n",
+            "   - Over 10 years, your net savings would be $6,897.96 (after subtracting installation costs)\n",
+            "\n",
+            "This means that:\n",
+            "- Your investment would pay for itself and then generate additional savings\n",
+            "- You'd be making a positive environmental impact while saving money\n",
+            "- After the system pays for itself, you'll continue to benefit from reduced energy costs\n",
+            "\n",
+            "Would you like to know more about the installation process or do you have any questions about these calculations?\n",
+            "------------------\n"
           ]
         }
       ]
