--- a/langgraph_with_llamaindex_tools.ipynb
+++ b/langgraph_with_llamaindex_tools.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgZRNl5ZPqR8cYJJt/033p",
+      "authorship_tag": "ABX9TyNzIqc+2plEeLW1L+DmBIEU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5245,7 +5245,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# appendix"
+      ],
       "metadata": {
         "id": "rA_rJFZMfSBr"
       },
@@ -5255,7 +5257,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# continue here.. not sure we need all this.. check langgraph for beginners\n",
+        "# i didn't use the following cells, but it's an alternative way to track the state and ask for input\n",
+        "\n",
         "# Note at each node: LangGraph reads the current state, then replaces the current AgentState\n",
         "# with the new AgentState object # returned by the node function.\n",
         "\n",
